--- a/esb/openemrconnect.properties
+++ b/esb/openemrconnect.properties
@@ -15,8 +15,8 @@ HTTPHandler.ListenPort=9710
 LoggingServer.Address=ke.go.moh.logger
 
 # IP/Port combinations corresponding to each message destination (or wildcard(*)).
-IPAddressPort.ke.go.moh.mpi=localhost:9711/length/md5
-IPAddressPort.ke.go.moh.logger=localhost:9712/length/md5
+IPAddressPort.ke.go.moh.mpi=localhost:9711/zip/length/md5
+IPAddressPort.ke.go.moh.logger=localhost:9712/zip/length/md5
 IPAddressPort.ke.go.moh.facility.14080=localhost:9720/zip/length/md5
 
 # The logger level (default is INFO, set to ALL for debugging & tracing)
